test/files/neg/hk-existential-lb.check
hk-existential-lb.scala:5: error: type mismatch;
 found   : Functor[Option]
 required: Functor[_[x] >: List[x]]
Note: Option <: Any, but class Functor is invariant in type F.
You may wish to define F as +F instead. (SLS 4.5)
  val someF: Functor[F] forSome { type F[x] >: List[x] } = new Functor[Option]
                                                           ^
one error found
